--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yazmin Ramirez | Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://platform.linkedin.com/badges/js/profile.js"
+      async
+      defer
+      type="text/javascript"
+    ></script>
   </head>
   <body>
     <!-- Navbar -->
@@ -85,8 +91,9 @@
       <p>Let’s build something amazing together!</p>
       <div class="socials">
         <a href="mailto:yazzy06ramirez@aol.com">📧 Email</a>
-        <a href="#">💼 LinkedIn</a>
         <a href="https://github.com/yazzyfresh">💻 GitHub</a>
+
+        <a href="#">💻 Linkedin</a>
       </div>
     </section>
 
