updated skills and added certs

--- a/index.html
+++ b/index.html
@@ -43,14 +43,25 @@
     <section id="about">
       <h2>About Me</h2>
       <p>
-        I'm a passionate web developer who loves building sleek, interactive,
-        and user-friendly websites. My focus is on creating smooth experiences
-        with clean, efficient code.
+        I'm a recent graduate from Middleton High School with a love for
+        Front-End development. My love for art and computers really allows me to
+        thrive in Web Development. I hope this love will continue to grow as I
+        proceed with my education at Brewster technical college in the fall.
       </p>
+      <h3>Skills</h3>
       <div class="skills">
         <div class="skill">HTML</div>
         <div class="skill">CSS</div>
         <div class="skill">Basic JavaScript</div>
+        <div class="skill">Basic Java</div>
+      </div>
+
+      <h3>Certs</h3>
+      <div class="skills">
+        <div class="skill">
+          98-383:MTA: Introduction to Programming using HTML and CSS
+        </div>
+        <div class="skill">PMI Project Management Ready®</div>
       </div>
     </section>
 
@@ -93,14 +104,19 @@
         <a href="mailto:yazzy06ramirez@aol.com">📧 Email</a>
         <a href="https://github.com/yazzyfresh">💻 GitHub</a>
 
-        <a href="#">💻 Linkedin</a>
+        <a href="https://www.linkedin.com/in/yazmin-ramirez-65310224a/"
+          >💻 Linkedin</a
+        >
       </div>
     </section>
 
     <!-- Back to Top Button -->
     <button id="backToTop" title="Go to top">↑</button>
 
-    <footer>© 2025 Yazmin Ramirez. All rights reserved.</footer>
+    <footer>
+      &copy; <span class="year">2027</span> by Yazmin Ramirez. All rights
+      reserved.
+    </footer>
 
     <script src="script.js" defer></script>
   </body>
