--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <div class="container">
         <div class="cta">
           <div class="cta-text-box">
-            <h2 class="heading-secondary">Get your first meal for free!</h2>
+            <h2 class="heading-secondary">Get an estimate for free!</h2>
             <p class="cta-text">
               Healthy, tasty and hassle-free meals are waiting for you. Start
               eating well today. You can cancel or pause anytime. And the first
