last little things

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="icon" href="images/logo.png" />
     <title>Yazmin Ramirez | Portfolio</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -39,7 +41,8 @@
         I'm a recent graduate from Middleton High School with a love for
         Front-End development. My love for art and computers really allows me to
         thrive in Web Development. I hope this love will continue to grow as I
-        proceed with my education at Brewster technical college in the fall of 2025 - Summer of 2026.
+        proceed with my education at Brewster technical college in the fall of
+        2025 - Summer of 2026.
       </p>
       <h3>Skills</h3>
       <div class="skills">
@@ -70,18 +73,16 @@
             HTML, CSS, And minimal JavaScript
           </p>
         </div>
-        <!-- <div class="project-card">
-          <img
-            src="https://via.placeholder.com/400x200"
-            alt="Project 2"
-          />
-          <h3>JavaScript Game</h3>
+        <div class="project-card">
+          <img src="images/port-img.png" alt="Project 2" />
+          <h3>My Portfolio</h3>
           <p>
-            A fun interactive browser game built using HTML, CSS, and vanilla
-            JS.
+            A site in which displays a Portfolio and work done with basic
+            contact links and an subbmittion area built using HTML, CSS, and
+            minimal JavaScript
           </p>
         </div>
-        <div class="project-card">
+        <!-- <div class="project-card">
           <img src="https://via.placeholder.com/400x200" alt="Project 3" />
           <h3>React Dashboard</h3>
           <p>
@@ -113,7 +114,10 @@
           <div class="cta-text-box">
             <h2 class="heading-secondary">Get an estimate for free!</h2>
             <p class="cta-text">
-                Simply enter your information and I will get in contact as soon as possible to set up a call or meeting in which I will discuss ideas, answer your questions, and provide a free estimate and time frame for your project.
+              Simply enter your information and I will get in contact as soon as
+              possible to set up a call or meeting in which I will discuss
+              ideas, answer your questions, and provide a free estimate and time
+              frame for your project.
             </p>
 
             <form class="cta-form" name="sign-up" netlify>
