--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 </select>
               </div>
 
-              <button class="btn btn--form">Sign up now</button>
+              <button type="btn btn-form">Sign up now</button>
 
               <p>
                 *Please keep in mind meeting times are based on how much on an
