--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
                 <label for="select-where">*What time range works for you?</label
                 ><select id="select-where" name="select">
                   <option value="">Please choose one option:</option>
-                  <option value="friends">Mornings between 9AM - 11AM</option>
-                  <option value="friends">Afternoons between 12PM - 4PM</option>
-                  <option value="friends">Evenings between 5PM - 11PM</option>
+                  <option value="9-11am">Mornings between 9AM - 11AM</option>
+                  <option value="12-4pm">Afternoons between 12PM - 4PM</option>
+                  <option value="5-11pm">Evenings between 5PM - 11PM</option>
                 </select>
               </div>
 
