--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
                   type="text"
                   placeholder="Website Name"
                   name="site"
+                  required
                 />
               </div>
 
@@ -156,7 +157,7 @@
               <div>
                 <label for="text">Whats your website for?</label>
                 <input
-                  id="email"
+                  id="use-of-site"
                   type="text"
                   placeholder=""
                   name="email"
