--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 </select>
               </div>
 
-              <button type="btn btn-form">Sign up now</button>
+              <button class="btn btn-form">Sign up now</button>
 
               <p>
                 *Please keep in mind meeting times are based on how much on an
