attempting to add mobile menu

--- a/index.html
+++ b/index.html
@@ -10,16 +10,22 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav>
-      <a href="#" class="logo">MyPortfolio</a>
-      <ul>
-        <li><a href="#hero">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+    <header class="header">
+      <nav>
+        <a href="#" class="logo">MyPortfolio</a>
+        <ul>
+          <li><a href="#hero">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
 
+      <button class="btn-mobile-nav">
+        <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+      </button>
+    </header>
     <!-- Hero Section -->
     <section id="hero">
       <div class="hero-text">
