--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Navbar -->
     <header class="header">
       <nav>
-        <a href="#" class="logo">MyPortfolio</a>
+        <a href="#" class="logo">Yazmin's Page </a>
         <ul>
           <li><a href="#hero">Home</a></li>
           <li><a href="#about">About</a></li>
@@ -123,7 +123,11 @@
               Simply enter your information and I will get in contact as soon as
               possible to set up a call or meeting in which I will discuss
               ideas, answer your questions, and provide a free estimate and time
-              frame for your project.
+              frame for your project. If you had questions just reach out!
+
+              <br />
+              <br />I can also send a list of my price break down and services
+              if needed. Just ensure you ask in the message box!
             </p>
 
             <form class="cta-form" name="sign-up" netlify>
@@ -179,6 +183,16 @@
                   <option value="12-4pm">Afternoons between 12PM - 4PM</option>
                   <option value="5-11pm">Evenings between 5PM - 11PM</option>
                 </select>
+                
+                 <div>
+                <label for="text">Any questions or comments?</label>
+                <input
+                  id="message-box"
+                  type="text"
+                  placeholder=""
+                  name="email"
+                  required
+                />
               </div>
 
               <button class="btn btn-form">Sign up now</button>
