forms for portfolio site

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                   id="use-of-site"
                   type="text"
                   placeholder=""
-                  name="email"
+                  name="use-of-site"
                   required
                 />
               </div>
@@ -190,7 +190,7 @@
                   id="message-box"
                   type="text"
                   placeholder=""
-                  name="email"
+                  name="message-box"
                   required
                 />
               </div>
