attemting to fix the issue of responsive design on smaller screens'

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <input
                   id="use-of-site"
                   type="text"
-                  placeholder=""
+                  placeholder="Required"
                   name="use-of-site"
                   required
                 />
@@ -191,7 +191,6 @@
                   type="text"
                   placeholder=""
                   name="message-box"
-                  required
                 />
               </div>
 
