--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </p>
         </div>
         <div class="project-card">
-          <img src="images/port-img.png"  sizes="(max-width: 821px)" alt="Project 2" />
+          <img src="images/port-img.png"  sizes="(max-width: 821px) 50vw, 400px" alt="Project 2" />
           <h3>My Portfolio</h3>
           <p>
             A site in which displays a Portfolio and work done with basic
