--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <h2>Projects</h2>
       <div class="projects">
         <div class="project-card">
-          <img src="images/omni-poject-sc.png" alt="Project 1" />
+          <img src="images/omni-poject-sc.png"  sizes="(max-width: 821px) 50vw, 400px" alt="Project 1" />
           <h3>Omnifood Project</h3>
           <p>
             A mockup project for an AI food subscription service built using
@@ -85,14 +85,12 @@
           <img src="images/port-img.png"  sizes="(max-width: 821px) 50vw, 400px" alt="Project 2" />
           <h3>My Portfolio</h3>
           <p>
-            A site in which displays a Portfolio and work done with basic
-            contact links and an subbmittion area built using HTML, CSS, and
-            minimal JavaScript
+            just a random image placeholder for now will update soon
           </p>
         </div>
         <!-- <div class="project-card">
-          <img src="https://via.placeholder.com/400x200" alt="Project 3" />
-          <h3>React Dashboard</h3>
+          <img src="https://tse3.mm.bing.net/th/id/OIP.ErC7Gvs26j-ggWryY_O3ogHaFk?rs=1&pid=ImgDetMain&o=7&rm=3" alt="Project 3" />
+          <h3>Random Project</h3>
           <p>
             A modern dashboard app showcasing React components and API
             integration.
