i FIXED THE ISSUEEEEEEE

--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
             just a random image placeholder for now will update soon
           </p>
         </div>
-        <!-- <div class="project-card">
+        <div class="project-card">
           <img src="https://tse3.mm.bing.net/th/id/OIP.ErC7Gvs26j-ggWryY_O3ogHaFk?rs=1&pid=ImgDetMain&o=7&rm=3" alt="Project 3" />
           <h3>Random Project</h3>
           <p>
             A modern dashboard app showcasing React components and API
             integration.
           </p>
-        </div> -->
+        </div>
       </div>
     </section>
 
