--- a/index.html
+++ b/index.html
@@ -74,8 +74,12 @@
       <h2>Projects</h2>
       <div class="projects">
         <div class="project-card">
-          <img src="images/omni-poject-sc.png"  sizes="(max-width: 821px) 50vw, 400px" alt="Project 1" />
-          <h3>Omnifood Project</h3>
+      
+
+<iframe src="https://omnifood-yazmin.netlify.app/" width="100%" height="500" style="border:1px solid #ffb347;">
+</iframe>
+
+<a rel="Page" href="https://omnifood-yazmin.netlify.app/"><h3>Omnifood Project</h3></a>
           <p>
             A mockup project for an AI food subscription service built using
             HTML, CSS, And minimal JavaScript
@@ -83,19 +87,30 @@
         </div>
         <div class="project-card">
           <img src="images/port-img.png"  sizes="(max-width: 821px) 50vw, 400px" alt="Project 2" />
+          <!-- update this section to an iframe -->
+           
           <h3>My Portfolio</h3>
           <p>
             just a random image placeholder for now will update soon
           </p>
         </div>
         <div class="project-card">
-          <img src="https://tse3.mm.bing.net/th/id/OIP.ErC7Gvs26j-ggWryY_O3ogHaFk?rs=1&pid=ImgDetMain&o=7&rm=3" alt="Project 3" />
-          <h3>Random Project</h3>
+          <iframe src="https://slipknot1.com/" width="100%" height="500" style="border:1px solid #ffb347;">
+</iframe>
+
+<a rel="Page" href="https://slipknot1.com/"><h3>Slipknot Project</h3></a>
           <p>
             A modern dashboard app showcasing React components and API
             integration.
           </p>
         </div>
+
+
+         <h1>My Video</h1>
+
+    <iframe width="500" height="320" src="https://www.youtube.com/embed/ZPUZwriSX4M">
+    </iframe>
+
       </div>
     </section>
 
@@ -183,7 +198,7 @@
                 />
               </div>
 
-              <button class="btn btn-form">Sign up now</button>
+              <button class="btn btn-form">Get your Estimate</button>
 
               <p>
                 *Please keep in mind meeting times are based on how much on an
