phone updated in contact section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="skill">Basic Java</div>
       </div>
 
-      <h3>Certs</h3>
+      <h3>Certifications</h3>
       <div class="skills">
         <div class="skill">
           98-383:MTA: Introduction to Programming using HTML and CSS
@@ -105,11 +105,17 @@
           </p>
         </div>
 
+        
+<div class="project-card">
+          <iframe src="https://zerodarkbirdie.org/" width="100%" height="500" style="border:1px solid #ffb347;">
+</iframe>
 
-         <h1>My Video</h1>
-
-    <iframe width="500" height="320" src="https://www.youtube.com/embed/ZPUZwriSX4M">
-    </iframe>
+<a rel="Page" href="https://zerodarkbirdie.org/"><h3>Zero Dark Birdie Project</h3></a>
+          <p>
+            A modern dashboard app showcasing React components and API
+            integration.
+          </p>
+        </div>
 
       </div>
     </section>
@@ -125,7 +131,7 @@
           >💻Linkedin</a
         >
 
-        <a href="tel:8133049182">📞Phone</a>
+        <a href="tel:(813)304-9182">📞Phone</a>
       </div>
     </section>
 
