--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
             <form class="cta-form" name="sign-up" netlify>
               <div>
-                <label for="full-name"> Full Name </label>
+                <label for="full-name"> Full Name* </label>
                 <input
                   id="full-name"
                   type="text"
@@ -164,7 +164,7 @@
               </div>
 
               <div>
-                <label for="email">Email address</label>
+                <label for="email">Email address*</label>
                 <input
                   id="email"
                   type="email"
@@ -175,7 +175,7 @@
               </div>
 
               <div>
-                <label for="text">Whats your website for?</label>
+                <label for="text">Whats your website for?*</label>
                 <input
                   id="use-of-site"
                   type="text"
@@ -186,7 +186,7 @@
               </div>
 
               <div>
-                <label for="select-where">*What time range works for you?</label
+                <label for="select-where">What time range works for you?**</label
                 ><select id="select-where" name="select">
                   <option value="">Please choose one option:</option>
                   <option value="9-11am">Mornings between 9AM - 11AM</option>
@@ -207,7 +207,7 @@
               <button class="btn btn-form">Get your Estimate</button>
 
               <p>
-                *Please keep in mind meeting times are based on how much on an
+                **Please keep in mind meeting times are based on how much on an
                 idea you have for your site
               </p>
 
