--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           </p>
         </div>
         <div class="project-card">
-          <iframe src="https://slipknot1.com/" width="100%" height="500" style="border:1px solid #000000;">
+          <iframe src="https://slipknot1.com/" width="100%" height="500" style="border:1px solid #ffb347;">
 </iframe>
 
 <a rel="Page" href="https://slipknot1.com/"><h3>Slipknot Project</h3></a>
