This is just a filler of SOMEONE ELSES project to show how an iframe             would look like in this section.

--- a/index.html
+++ b/index.html
@@ -100,20 +100,19 @@
 
 <a rel="Page" href="https://slipknot1.com/"><h3>Slipknot Project</h3></a>
           <p>
-            A modern dashboard app showcasing React components and API
-            integration.
+            This is just a filler of SOMEONE ELSES project to show how an iframe
+            would look like in this section.
           </p>
         </div>
 
-        
-<div class="project-card">
+        <div class="project-card">
           <iframe src="https://zerodarkbirdie.org/" width="100%" height="500" style="border:1px solid #ffb347;">
 </iframe>
 
 <a rel="Page" href="https://zerodarkbirdie.org/"><h3>Zero Dark Birdie Project</h3></a>
           <p>
-            A modern dashboard app showcasing React components and API
-            integration.
+             This is just a filler of SOMEONE ELSES project to show how an iframe
+            would look like in this section.
           </p>
         </div>
 
