Fix capitalization in college name and update projects section heading

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         I'm a recent graduate from Middleton High School with a love for
         Front-End development. My love for art and computers really allows me to
         thrive in Web Development. I hope this love will continue to grow as I
-        proceed with my education at Brewster technical college in the fall of
+        proceed with my education at Brewster Technical College in the fall of
         2025 - Summer of 2026.
       </p>
       <h3>Skills</h3>
@@ -71,12 +71,10 @@
 
     <!-- Projects Section -->
     <section id="projects">
-      <h2>Projects</h2>
+      <h2> Recent Projects</h2>
       <div class="projects">
         <div class="project-card">
-      
-
-<iframe src="https://omnifood-yazmin.netlify.app/" width="100%" height="500" style="border:1px solid #ffb347;">
+          <iframe src="https://omnifood-yazmin.netlify.app/" width="100%" height="500" style="border:1px solid #ffb347;">
 </iframe>
 
 <a rel="Page" href="https://omnifood-yazmin.netlify.app/"><h3>Omnifood Project</h3></a>
