added the form link to email

--- a/index.html
+++ b/index.html
@@ -148,8 +148,13 @@
               if needed. Just ensure you ask in the message box!
             </p>
 
-            <form class="cta-form" name="sign-up" netlify>
+            <form  id="contact-form" action="https://formsubmit.co/yazzy06ramirez@aol.com" method="post" class="cta-form" name="sign-up" netlify>
               <div>
+<input type="hidden" name="_subject" value="New message from  your portfolio site!">
+<input type="hidden" name="_captcha" value="false">
+<input type="hidden" name="_template" value="table"
+
+
                 <label for="full-name"> Full Name* </label>
                 <input
                   id="full-name"
