fixed form submission issue

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               if needed. Just ensure you ask in the message box!
             </p>
 
-            <form  id="contact-form" action="https://formsubmit.co/yazzy06ramirez@aol.com" method="post" class="cta-form" name="sign-up" netlify>
+            <form id="contact-form" action="https://formsubmit.co/yazzy06ramirez@aol.com" method="POST" class="cta-form" name="sign-up" netlify>
               <div>
                 
 <input type="hidden" name="_subject" value="New message from  your portfolio site!">
